zeta-code/tui/src/app/snapshots/app__interaction_flow_tests__approval_submission_failed.snap
---
source: zeta-code/tui/src/app/interaction_flow_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                        [— / —] [Dashboard]









┌Approval required─────────────────────────────────────────────────────────────┐
│Run the requested command?                                                    │
│Process spawn  ·  cargo test                                                  │
│> Approve once                                                                │
│  Decline                                                                     │
│offline                                                                       │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘

  Enter to confirm
