zeta-code/tui/src/app/snapshots/app__interaction_flow_tests__query_custom_answer.snap
---
source: zeta-code/tui/src/app/interaction_flow_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                        [— / —] [Dashboard]






┌Next step  (1/1)──────────────────────────────────────────────────────────────┐
│How should the work continue?                                                 │
│  Continue  Use the proposed approach                                         │
│> 自己输入  在下方输入框中回答                                                │
│> Keep the user draft                                                         │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ > chat draft stays here                                                  │
  ╰──────────────────────────────────────────────────────── Automatic model ─╯

  Enter to answer · Esc to cancel
