zeta-code/tui/src/app/snapshots/app__interaction_flow_tests__query_open_short.snap
---
source: zeta-code/tui/src/app/interaction_flow_tests.rs
expression: "render(&app, 42, 16)"
---
  .                          [Dashboard]



┌Next step  (1/1)────────────────────────┐
│How should the work continue?           │
│> Continue  Use the proposed approach   │
│  自己输入  在下方输入框中回答          │
│                                        │
└────────────────────────────────────────┘

  ╭────────────────────────────────────╮
  │ > chat draft stays here            │
  ╰────────────────── Automatic model ─╯

  Enter to answer
